@@ -1,3 +1,8 @@
+2000-08-30  Tristan Tarrant  <nadir@users.sourceforge.net>
+
+	* tools/u7shpload.c: Fixed serious bug where opening multiple SHPs
+	would not work. Saving is still screwed...
+
 2000-08-29  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* egg.cc: Support external_criteria eggs.
